--- a/FantasyEsportsBattle.InfoTracker/FantasyEsportsBattle.InfoTracker.csproj
+++ b/FantasyEsportsBattle.InfoTracker/FantasyEsportsBattle.InfoTracker.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -28,7 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\FantasyEsportsBattle.Host\FantasyEsportsBattle.Host.csproj" />
+    <ProjectReference Include="..\src\FantasyEsportsBattle.Web\FantasyEsportsBattle.Web.csproj" />
   </ItemGroup>
 
   <ItemGroup>
