--- a/FantasyEsportsBattle.InfoTracker/appsettings.json
+++ b/FantasyEsportsBattle.InfoTracker/appsettings.json
@@ -9,5 +9,15 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Warning"
+      }
+    }
+  }
 }
