--- a/src/FantasyEsportsBattle.Web/appsettings.json
+++ b/src/FantasyEsportsBattle.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=FantasyEsports;Trusted_Connection=True;"
+    "DefaultConnection": "Server=.;Database=FantasyEsports;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
