--- a/FantasyEsportsBattle.InfoTracker/appsettings.json
+++ b/FantasyEsportsBattle.InfoTracker/appsettings.json
@@ -2,22 +2,5 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=FantasyEsports;Trusted_Connection=True;"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*",
-
-  "Serilog": {
-    "MinimumLevel": {
-      "Default": "Information",
-      "Override": {
-        "Microsoft": "Information",
-        "System": "Warning"
-      }
-    }
-  }
+  "AllowedHosts": "*"
 }
