--- a/FantasyEsportsBattle.InfoTracker/appsettings.Production.json
+++ b/FantasyEsportsBattle.InfoTracker/appsettings.Production.json
@@ -2,7 +2,7 @@
   "DetailedErrors": true,
   "Serilog": {
     "MinimumLevel": {
-      "Default": "Debug",
+      "Default": "Error",
       "Override": {
         "Microsoft": "Information",
         "System": "Warning"
